# Analytic-Eigensystems-Distortion

./: README.md
src/: CMakeLists.txt  main.cpp
src/SimulatorCore/: DeformationGradient.cpp  DeformationGradient.h  Simulator.cpp  Simulator.h
src/Utilities/: MathUtils.h
